2003-02-19  James Henstridge  <james@daa.com.au>

	* Makefile.am (GNOME2_MACROS): remove check-utmp.m4 (copied it to
	libzvt, which is the only thing using it).

	* gnome-deprecated-macros.m4(GNOME_CHECK_CXX): AC_REQUIRE does not
	work within AU_DEFUN, so change to a simple call to AC_PROG_CXX.

2003-02-18  James Henstridge  <james@daa.com.au>

	* autogen.sh (topdir): check to see if gnome-deprecated-macros.m4
	ended up in aclocal.m4, and warn if so.

	* gnome-platform.m4: kill this too (with a deprecation warning).

	* gnome-cxx-check.m4: move to gnome-deprecated-macros.m4

	* gnome-pkgconfig.m4: remove, and add a deprecation warning in its
	place.

	* gnome-x-checks.m4: remove, and add an AU_DEFUN in its place
	telling people not to use it.

	* linger.m4: removed outright.

	* gnome-common.m4: remove GNOME_GTKDOC_CHECK, deprecated in favour
	of GTK_DOC_CHECK.

	* gnome-gettext.m4: remove file (people should be using gettextize
	or glib-gettextize).

	* gnome-deprecated-macros.m4: new file to hold deprecated macros.

2003-02-14  Kalpesh Shah <kalpesh.shah@sun.com>

	* check-utmp.m4: initialize UTMP structure properly. 
	Fixes Bug#93774.
	Patch reviewed by Andersca <andersca@gnu.org>

2002-09-23  Bastien Nocera  <hadess@hadess.net>

	* autogen.sh: exit if aclocal, autoheader, automake or autoconf
	fails to run without warnings. Usually compilation would fail
	afterwards with funky errors.
	This is more anal than the version committed to the gnome-2-0 branch

2002-08-18  Havoc Pennington  <hp@pobox.com>

	* autogen.sh: hardcode aclocal-1.4/automake-1.4 so that users with
	both automake 1.6 and 1.4 installed get the right automake. Means
	compilation from CVS will now require the latest automake 1.4
	release, or manually creating symlinks called "automake-1.4" and
	"aclocal-1.4"

Mon Aug 12 23:49:41 2002  HideToshi Tajima  <hidetoshi.tajima@sun.com>

	* autogen.sh : use portable -o instead of GNU-ish -or for find test

2002-08-10  Miles Lane  <miles_lane@yahoo.com>
